playing with flex-box definition to try to get the skills to display correctly on iOS smalls screen.

--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ a {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  // justify-content: space-around;
   padding: 10px;
 }
 
